--- a/README
+++ b/README
@@ -20,9 +20,9 @@ int iom_init(size_t size, struct iom_buffer **iom_buffer, unsigned flags);
 
 int iom_push(struct iom_buffer *iom_buffer, unsigned char *buf, size_t len, int flags);
 
-int iom_shift(struct iom_buffer *iom_buffer, unsigned char *buf, int *buf_len, int max_size);
+int iom_shift(struct iom_buffer *iom_buffer, unsigned char *buf, unsigned int *buf_len, unsigned int max_size);
 
-int iom_peek(struct iom_buffer *iom_buffer, unsigned char *buf, int *buf_len, int max_size);
+int iom_peek(struct iom_buffer *iom_buffer, unsigned char *buf, unsigned int *buf_len, unsigned int max_size);
 
 int iom_peek_update(struct iom_buffer *iom_buffer);
 
